--- a/js/angular/templates/home.html
+++ b/js/angular/templates/home.html
@@ -1,1 +1,45 @@
-<h1>Home</h1>
+<div class="col-sm-4" ng-controller="MailListingController">
+    <h2>Sidebar</h2>
+    <ul id="emailListing">
+        <li ng-repeat="mail in email" ng-click="setSelectedMail(mail)">
+            <div class="row emailListing" ng-class="{selected: isSelected(mail)}">
+                <div class="col-sm-8">{{mail.from}}</div>
+                <div class="col-sm-12">{{mail.subject}}</div>
+            </div>
+
+        </li>
+    </ul>
+</div>
+<div class="col-sm-8" ng-controller="ContentController">
+    <h2>Content</h2>
+    <div ng-show="!selectedMail">
+        <h2>No Conversation Selected</h2>
+    </div>
+    <div ng-show="selectedMail">
+        <form class="form" id="replyForm" ng-submit="sendEmailReply()" ng-show="showingReply">
+
+            <div class="form-group">
+                <label for="exampleInputEmail2">To</label>
+                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" placeholder="Message......" ng-model="reply.body"></textarea>
+            </div>
+            <button class="btn btn-default" ng-click="sendReply()">Send</button>
+            <button class="btn btn-danger" ng-click="cancelReply()">Cancel</button>
+
+        </form>
+        <div class="row header">
+            <div class="col-sm-6">{{selectedMail.subject}}</div>
+            <div class="col-sm-6">{{selectedMail.sent_at | date:"dd/MM/yy"}}</div>
+        </div>
+
+        <div class="row action">
+            <div class="col-sm-8">{{selectedMail.from.join(", ")}} to {{selectedMail.to}}</div>
+            <a ng-click="showReply()" class="btn btn-default">Reply</a>
+            <div class="col-sm-12" ng-bind="selectedMail.body"></div>
+
+        </div>
+
+    </div>
+</div>
