--- a/js/angular/templates/settings.html
+++ b/js/angular/templates/settings.html
@@ -17,7 +17,7 @@
                 <input type="number" class="form-control" name="age" placeholder="Age" ng-model="settings.age">
             </div>
 
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default" ng-disabled="form.$dirty && form.$invalid ">Update</button>
     </form>
-    {{settings}}
+
     </div>
