--- a/js/angular/templates/home.html
+++ b/js/angular/templates/home.html
@@ -1,7 +1,10 @@
 <div class="col-sm-4" ng-controller="MailListingController">
-    <h2>Sidebar</h2>
+    
+    <input class="form-control" type="search" placeholder="Filter messages" ng-model="search"/> 
+    <input class="form-control" type="number" placeholder="Filter messages By years" ng-model="nYearsAgo"/> 
+    
     <ul id="emailListing">
-        <li ng-repeat="mail in email" ng-click="setSelectedMail(mail)">
+        <li ng-repeat="mail in email |  orderBy:'sent_at':true  | filter:searchPastNYears" ng-click="setSelectedMail(mail)">
             <div class="row emailListing" ng-class="{selected: isSelected(mail)}">
                 <div class="col-sm-8">{{mail.from}}</div>
                 <div class="col-sm-12">{{mail.subject}}</div>
