--- a/js/angular/templates/home.html
+++ b/js/angular/templates/home.html
@@ -1,16 +1,9 @@
 <div class="col-sm-4" ng-controller="MailListingController">
-    
-    <input class="form-control" type="search" placeholder="Filter messages" ng-model="search"/> 
-    <input class="form-control" type="number" placeholder="Filter messages By years" ng-model="nYearsAgo"/> 
-    
-    <ul id="emailListing">
-        <li ng-repeat="mail in email |  orderBy:'sent_at':true  | filter:searchPastNYears" ng-click="setSelectedMail(mail)">
-            <div class="row emailListing" ng-class="{selected: isSelected(mail)}">
-                <div class="col-sm-8">{{mail.from}}</div>
-                <div class="col-sm-12">{{mail.subject}}</div>
-            </div>
 
-        </li>
+    <input class="form-control" type="search" placeholder="Filter messages" ng-model="search" />
+
+    <ul id="emailsListing">
+        <li email-listing email="mail" gravatarSize='20' action='setSelectedMail(selectedMail)' ng-repeat="mail in email| filter:search"> </li>
     </ul>
 </div>
 <div class="col-sm-8" ng-controller="ContentController">
